# msgraph-min

./: .gitignore  README.md  pyproject.toml
src/msgraph_min/: __init__.py  graph_service_client.py  kiota-lock.json
src/msgraph_min/me/: me_request_builder.py
src/msgraph_min/models/: access_action.py  access_package_answer.py  access_package_answer_choice.py  access_package_approval_stage.py  access_package_assignment_approval_settings.py  access_package_assignment_requestor_settings.py  access_package_assignment_review_settings.py  access_package_automatic_request_settings.py  access_package_localized_text.py  access_package_notification_settings.py  access_package_resource_attribute.py  access_package_resource_attribute_destination.py  access_package_resource_attribute_source.py  access_review_apply_action.py  access_review_history_schedule_settings.py  access_review_instance_decision_item_resource.py  access_review_notification_recipient_item.py  access_review_notification_recipient_scope.py  access_review_recommendation_insight_setting.py  access_review_reviewer_scope.py  access_review_schedule_settings.py  access_review_scope.py  access_review_stage_settings.py  account_target_content.py  activity_metadata.py  add_in.py  aggregation_option.py  agreement_file_data.py  ai_interaction_plugin.py  akamai_attack_group_action_model.py  akamai_custom_rule_model.py  akamai_rapid_rules_model.py  album.py  alert_detection.py  alert_history_state.py  alert_trigger.py  alteration_response.py  altered_query_token.py  alternative_security_id.py  (+617 more)
(+86 files in other folders)
