[tool.poetry]
name = "msgraph-min"
version = "0.1.0"
description = ""
authors = ["Saksham Shah <saksham@metaview.ai>"]
readme = "README.md"
packages = [{include = "msgraph_min", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
microsoft-kiota-bundle = "^1.9.3"
microsoft-kiota-authentication-azure = "^1.9.3"
requests = "^2.32.4"
urllib3 = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
